--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="image-box">
             <img src="image9.jpg" alt="توضیحات عکس ۲">
-            <p>بهترین جمله کتاب 'اصیل آباد' از نظر آقای محمدمهدی صیادی</p>
+            <p>بهترین جمله کتاب 'رفاقت به سبک تانک' از نظر آقای محمدمهدی صیادی</p>
         </div>
         <div class="image-box">
             <img src="image5.jpg" alt="توضیحات عکس ۲">
@@ -67,11 +67,11 @@
         </div>
         <div class="image-box">
             <img src="image13.jpg" alt="توضیحات عکس ۲">
-            <p>بهترین جمله کتاب 'رفاقت به سبک تانک' از نظر آقای علی ستایش‌نیا</p>
+            <p>بهترین جمله کتاب 'اصیل آباد' از نظر آقای علی ستایش‌نیا</p>
         </div>
         <div class="image-box">
             <img src="image14.jpg" alt="توضیحات عکس ۲">
-            <p>بهترین جمله کتاب 'اصیل آباد' از نظر آقای محمدعارف امیری</p>
+            <p>بهترین جمله کتاب 'رفاقت به سبک تانک' از نظر آقای محمدعارف امیری</p>
         </div>
         <div class="image-box">
             <img src="image19.jpg" alt="توضیحات عکس ۲">
